--- a/pom.xml
+++ b/pom.xml
@@ -61,6 +61,11 @@
 			<scope>import</scope>
 			<type>pom</type>
 		</dependency>
+		<dependency>
+			<groupId>org.springdoc</groupId>
+			<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+			<version>2.8.8</version>
+		</dependency>
 	</dependencies>
 
 	<build>
