--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,3 +13,5 @@ spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.h2.console.enabled=true
 
 spring.h2.console.path=/h2-console
+
+springdoc.swagger-ui.path=/swagger-ui.html
