Foram realizados ajustes na estrutura do código e adicionado ajustes para a documentação interativa, hash para senha e erros mais intuitivos

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=apisimulacao
 
-spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.url=jdbc:h2:mem:testdb;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
 
 spring.datasource.driverClassName=org.h2.Driver
 
@@ -15,3 +15,21 @@ spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
 
 springdoc.swagger-ui.path=/swagger-ui.html
+
+#CONFIGURAÇÕES DE LOGS
+#Nível de log para o Spring Boot (INFO é padrão e suficiente)
+logging.level.org.springframework.boot=DEBUG
+
+#Nível de log para suas próprias classes e pacotes (INFO para produção)
+logging.level.com.testest.apisimulacao=INFO
+
+#Nível de log para Spring Security (INFO para eventos importantes)
+logging.level.org.springframework.security=INFO
+
+#Nível de log para exceções de acesso a dados (INFO para diagnosticar problemas de banco)
+logging.level.org.springframework.dao=INFO
+
+#Nível de log para ver queries SQL (INFO geralmente não mostra queries, mude para DEBUG APENAS se precisar)
+logging.level.org.hibernate.SQL=INFO
+
+server.error.include-message=always
